# about-me

./: .gitignore  README.md  assignment_template-230628-220301.txt  pyproject.toml
app/: about_me.txt  app.py  test_app.py
app/static/: style.css
app/templates/: index.html
data/: resume.txt
notebooks/: app.py  test-chatbot.py
notebooks/static/: style.css
notebooks/templates/: index.html
src/: client.py  db_connect.py  etl.py  fields.py  query.py
