
[tool.poetry]
name = "[lang-chain-vec-db]"
version = "0.1.0"
description = "DS Repo Template"
authors = ["Matt Batacan <mattbatacan@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9.12,<3.13"
python-dotenv = "^1.0.1"
pinecone-client = "^3.1.0"
langchain = "^0.1.12"
openai = "^1.14.0"
datasets = "^2.18.0"
transformers = "^4.38.2"
torch = "^2.2.1"
langchain-pinecone = "^0.0.3"
langchain-openai = "^0.0.8"
flask = "^3.0.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
ruff = "*"
bandit = "*"
black = "*"
flake8 = "*"
isort = "*"
ipykernel = "*"
mkdocs = "*"
mkdocs-git-revision-date-plugin = "*"
pymdown-extensions = "*"
mkdocs-material = "*"
mkdocs-autorefs = "*"
types-PyYAML = "*"
mypy = "*"

[tool.black]
exclude = "^tests/"
line-length = 88
skip-string-normalization = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
target-version = "py39" # Python 3.9

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = "carrot"
default_section = "THIRDPARTY"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88